--- a/server/functions/package.json
+++ b/server/functions/package.json
@@ -14,6 +14,9 @@
   },
   "main": "index.js",
   "dependencies": {
+    "apify-client": "^2.9.5",
+    "axios": "^1.6.8",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "express": "^4.19.2",
