--- a/server/public/manifest.json
+++ b/server/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "Amir's Portfolio",
-  "name": "Amir's Portfolio",
+  "short_name": "QRganize",
+  "name": "QRganize",
   "icons": [
     {
-      "src": "amir-icon-background.png",
+      "src": "QRganize-logo.png",
       "sizes": "512x512 192x192 64x64 32x32 24x24 16x16",
       "type": "image/png"
     }
