--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -3,16 +3,18 @@
 
 name: Deploy to Firebase Hosting on PR
 'on': pull_request
+permissions:
+  checks: write
+  contents: read
+  pull-requests: write
 jobs:
   build_and_preview:
-    if: github.event.pull_request.head.repo.full_name == github.repository
+    if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
     environment:
       name: staging
-
     steps:
-      - uses: actions/checkout@v3
-
+      - uses: actions/checkout@v4
       - name: Set up API base URL
         run: echo "REACT_APP_API_BASE_URL=${{ secrets.API_BASE_URL }}" >> $GITHUB_ENV
       
