--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,7 @@
   "functions": [
     {
       "source": "functions",
+      "gen": 1,
       "codebase": "default",
       "ignore": [
         "node_modules",
