--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@zxing/library": "^0.21.3",
     "dayjs": "^1.11.10",
     "firebase": "^10.7.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
-    "react-qr-barcode-scanner": "^2.0.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.1",
