--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@zxing/library": "^0.21.3",
     "dayjs": "^1.11.13",
     "firebase": "^10.7.2",
+    "jsbarcode": "^3.11.6",
     "jwt-decode": "^4.0.0",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
